Styling / Client / Fixed alignment issues with shop view (filter now aligned vertically to the left, products flex-wrapped to reproduce positioning regardless of # products

--- a/client/src/styles/Main.scss
+++ b/client/src/styles/Main.scss
@@ -67,3 +67,7 @@ ul {
 section {
   padding: 10px;
 }
+
+.banner {
+  padding: 10px 14px;
+}
