--- a/client/src/views/Home/Home.scss
+++ b/client/src/views/Home/Home.scss
@@ -10,6 +10,7 @@
   section:not(#Search) {
   }
 
+  .banner,
   section:nth-child(odd) {
     background: $secondary-color;
   }
